--- a/lab10/hh-front/client/src/app/company-detail/company-detail.component.html
+++ b/lab10/hh-front/client/src/app/company-detail/company-detail.component.html
@@ -3,7 +3,7 @@
     {{company.name}}
 
     <h3>Description</h3>
-    {{company.desc}}
+    {{company.description}}
 
     <h3>City</h3>
     {{company.city}}
@@ -18,7 +18,7 @@
         <li>
             <h4>{{vacancy.name}}:</h4>
             <ul>
-                Description: {{vacancy.desc}}
+                Description: {{vacancy.description}}
             </ul>
             <ul>
                 Salary: {{vacancy.salary}}
